--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cookie-parser": "^1.4.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "mongoose": "^6.1.3",
         "user-agents": "^1.0.771"
     }
 }
