--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "devDependencies": {
         "@babel/core": "^7.13.16",
         "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-terser": "^0.4.0",
         "@vue/babel-plugin-jsx": "^1.0.5",
-        "rollup": "2.45.2",
-        "rollup-plugin-terser": "^7.0.2"
+        "rollup": "2.45.2"
     }
 }
